# hotel-booking-backend

./: .gitignore  README.md  license.txt  pyproject.toml  setup.py
hotel_booking/: hooks.py
hotel_booking/api/: availability.py  booking.py  calendar.py  contact.py  payment.py
hotel_booking/fixtures/: custom_field.json
hotel_booking/hotel_booking/: __init__.py
hotel_booking/hotel_booking/doctype/booking/: __init__.py  booking.json  booking.py
hotel_booking/hotel_booking/doctype/booking_room/: __init__.py  booking_room.json  booking_room.py
hotel_booking/hotel_booking/doctype/bookings/: bookings.js  bookings.json  bookings.py  test_bookings.py
hotel_booking/hotel_booking/doctype/guest/: __init__.py  guest.json  guest.py
hotel_booking/hotel_booking/doctype/hotel/: __init__.py  hotel.json  hotel.py
hotel_booking/hotel_booking/doctype/hotel_booking_settings/: __init__.py  hotel_booking_settings.json  hotel_booking_settings.py
hotel_booking/hotel_booking/doctype/room/: __init__.py  room.json  room.py
hotel_booking/hotel_booking/doctype/room_amenity/: room_amenity.json  room_amenity.py
hotel_booking/hotel_booking/doctype/room_feature/: room_feature.json  room_feature.py
hotel_booking/hotel_booking/doctype/room_pricing/: room_pricing.json  room_pricing.py
hotel_booking/public/css/: hotel_booking.css
hotel_booking/public/js/: booking.js  booking_calendar.js  hotel_booking.js
hotel_booking/utils/: email_notification.py
hotel_booking/www/: book-success.html  book-success.py  book.html  book.py
(+13 files in other folders)
